<resources>
    <string name="app_name">LEADERBOARD</string>
    <string name="tab_learning_leaders">Learning Leaders</string>
    <string name="tab_skill_iq_leaders">Skill IQ Leaders</string>
    <string name="hello_blank_fragment">Hello fragment</string>
    <string name="btnSubmit">Submit</string>
    <string name="skill_learning">322 learning hours, Kenya</string>
    <string name="john_doe">John Doe</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_project_on_github_link">Project on GITHUB (link)</string>
</resources>